@@ -4,7 +4,7 @@ import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import fr.sncf.osrd.envelope_sim.EnvelopePath;
 import fr.sncf.osrd.envelope_sim.EnvelopeSimContext;
 import fr.sncf.osrd.envelope_sim.allowances.Allowance;
-import fr.sncf.osrd.envelope_sim.allowances.utils.AllowanceDistribution;
+import fr.sncf.osrd.envelope_sim.allowances.LinearAllowance;
 import fr.sncf.osrd.envelope_sim.allowances.utils.AllowanceRange;
 import fr.sncf.osrd.envelope_sim.allowances.utils.AllowanceValue;
 import fr.sncf.osrd.envelope_sim.allowances.MarecoAllowance;
@@ -12,10 +12,7 @@ import fr.sncf.osrd.infra.api.signaling.SignalingInfra;
 import fr.sncf.osrd.infra_state.api.TrainPath;
 import fr.sncf.osrd.railjson.parser.exceptions.InvalidSchedule;
 import fr.sncf.osrd.railjson.parser.exceptions.UnknownRollingStock;
-import fr.sncf.osrd.railjson.schema.schedule.RJSAllowance;
-import fr.sncf.osrd.railjson.schema.schedule.RJSAllowanceRange;
-import fr.sncf.osrd.railjson.schema.schedule.RJSAllowanceValue;
-import fr.sncf.osrd.railjson.schema.schedule.RJSStandaloneTrainSchedule;
+import fr.sncf.osrd.railjson.schema.schedule.*;
 import fr.sncf.osrd.train.RollingStock;
 import fr.sncf.osrd.train.StandaloneTrainSchedule;
 import java.util.ArrayList;
@@ -49,8 +46,12 @@ public class RJSStandaloneTrainScheduleParser {
         // parse allowances
         var allowances = new ArrayList<Allowance>();
         if (rjsTrainSchedule.allowances != null)
-            for (int i = 0; i < rjsTrainSchedule.allowances.length; i++)
-                allowances.add(parseAllowance(timeStep, rollingStock, envelopePath, rjsTrainSchedule.allowances[i]));
+            for (int i = 0; i < rjsTrainSchedule.allowances.length; i++) {
+                var rjsAllowance = rjsTrainSchedule.allowances[i];
+                allowances.add(
+                        parseAllowance(timeStep, rollingStock, envelopePath, rjsAllowance)
+                );
+            }
 
         return new StandaloneTrainSchedule(rollingStock, initialSpeed, stops, allowances);
     }
@@ -69,52 +70,39 @@ public class RJSStandaloneTrainScheduleParser {
             RJSAllowance rjsAllowance
     ) throws InvalidSchedule {
 
-        if (rjsAllowance.getClass() == RJSAllowance.Construction.class) {
-            var rjsConstruction = (RJSAllowance.Construction) rjsAllowance;
-            if (Double.isNaN(rjsConstruction.beginPosition))
-                throw new InvalidSchedule("missing construction allowance begin_position");
-            if (Double.isNaN(rjsConstruction.endPosition))
-                throw new InvalidSchedule("missing construction allowance end_position");
-            return new MarecoAllowance(
-                    new EnvelopeSimContext(rollingStock, envelopePath, timeStep),
-                    rjsConstruction.beginPosition,
-                    Math.min(envelopePath.length, rjsConstruction.endPosition),
-                    getPositiveDoubleOrDefault(rjsConstruction.capacitySpeedLimit, 30 / 3.6),
-                    List.of(
-                            new AllowanceRange(
-                                    rjsConstruction.beginPosition,
-                                    rjsConstruction.endPosition,
-                                    parseAllowanceValue(rjsConstruction.value)
-                            )
-                    )
-            );
+        var allowanceDistribution = rjsAllowance.distribution;
+        double beginPos;
+        double endPos;
+        List<AllowanceRange> ranges;
+        // parse allowance type
+        if (rjsAllowance instanceof RJSAllowance.EngineeringAllowance engineeringAllowance) {
+            beginPos = engineeringAllowance.beginPosition;
+            endPos = Math.min(envelopePath.length, engineeringAllowance.endPosition);
+            ranges = List.of(new AllowanceRange(beginPos, endPos, parseAllowanceValue(engineeringAllowance.value)));
+        } else if (rjsAllowance instanceof RJSAllowance.StandardAllowance standardAllowance) {
+            beginPos = 0;
+            endPos = envelopePath.getLength();
+            ranges = parseAllowanceRanges(envelopePath, standardAllowance.defaultValue, standardAllowance.ranges);
+        } else {
+            throw new RuntimeException("unknown allowance type");
         }
-
-        if (rjsAllowance.getClass() == RJSAllowance.Mareco.class) {
-            var rjsMareco = (RJSAllowance.Mareco) rjsAllowance;
-            if (rjsMareco.defaultValue == null)
-                throw new InvalidSchedule("missing mareco default_value");
-            return new MarecoAllowance(
+        // parse allowance distribution
+        return switch (allowanceDistribution) {
+            case MARECO -> new MarecoAllowance(
                     new EnvelopeSimContext(rollingStock, envelopePath, timeStep),
-                    0, envelopePath.getLength(),
-                    getPositiveDoubleOrDefault(rjsMareco.capacitySpeedLimit, 30 / 3.6),
-                    parseAllowanceRanges(envelopePath, rjsMareco.defaultValue, rjsMareco.ranges)
+                    beginPos,
+                    endPos,
+                    getPositiveDoubleOrDefault(rjsAllowance.capacitySpeedLimit, 30 / 3.6),
+                    ranges
             );
-        }
-
-        if (rjsAllowance.getClass() == RJSAllowance.Linear.class) {
-            var rjsLinear = (RJSAllowance.Linear) rjsAllowance;
-            if (rjsLinear.defaultValue == null)
-                throw new InvalidSchedule("missing linear default_value");
-            return new MarecoAllowance(
+            case LINEAR -> new LinearAllowance(
                     new EnvelopeSimContext(rollingStock, envelopePath, timeStep),
-                    0, envelopePath.getLength(),
-                    getPositiveDoubleOrDefault(rjsLinear.capacitySpeedLimit, 30 / 3.6),
-                    parseAllowanceRanges(envelopePath, rjsLinear.defaultValue, rjsLinear.ranges)
+                    beginPos,
+                    endPos,
+                    getPositiveDoubleOrDefault(rjsAllowance.capacitySpeedLimit, 30 / 3.6),
+                    ranges
             );
-        }
-
-        throw new RuntimeException("unknown allowance type");
+        };
     }
 
     private static List<AllowanceRange> parseAllowanceRanges(
@@ -131,7 +119,7 @@ public class RJSStandaloneTrainScheduleParser {
         // sort the range list by begin position
         var sortedRanges = Arrays.stream(ranges)
                 .sorted(Comparator.comparingDouble(range -> range.beginPos))
-                .collect(Collectors.toList());
+                .toList();
         var res = new ArrayList<AllowanceRange>();
         var lastEndPos = 0.0;
         for (var range : sortedRanges) {
@@ -160,19 +148,19 @@ public class RJSStandaloneTrainScheduleParser {
             var rjsTimePerDist = (RJSAllowanceValue.TimePerDistance) rjsValue;
             if (Double.isNaN(rjsTimePerDist.minutes))
                 throw new InvalidSchedule("missing minutes in time per distance allowance");
-            return new AllowanceValue.TimePerDistance(AllowanceDistribution.DISTANCE_RATIO, rjsTimePerDist.minutes);
+            return new AllowanceValue.TimePerDistance(rjsTimePerDist.minutes);
         }
         if (rjsValue.getClass() == RJSAllowanceValue.Time.class) {
             var rjsFixedTime = (RJSAllowanceValue.Time) rjsValue;
             if (Double.isNaN(rjsFixedTime.seconds))
                 throw new InvalidSchedule("missing seconds in time allowance");
-            return new AllowanceValue.FixedTime(AllowanceDistribution.TIME_RATIO, rjsFixedTime.seconds);
+            return new AllowanceValue.FixedTime(rjsFixedTime.seconds);
         }
         if (rjsValue.getClass() == RJSAllowanceValue.Percent.class) {
             var rjsPercentage = (RJSAllowanceValue.Percent) rjsValue;
             if (Double.isNaN(rjsPercentage.percentage))
                 throw new InvalidSchedule("missing percentage in percentage allowance");
-            return new AllowanceValue.Percentage(AllowanceDistribution.TIME_RATIO, rjsPercentage.percentage);
+            return new AllowanceValue.Percentage(rjsPercentage.percentage);
         }
 
         throw new RuntimeException("unknown allowance value type");
